--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,7 @@
 }
 
 html {
-    scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
 }
 
 body {
@@ -38,4 +38,8 @@ body {
 
 .text-section {
     font-size: clamp(2rem, 5vw, 4rem);
+}
+
+.img-container {
+    scroll-snap-align: start;
 }
